--- a/src/App.css
+++ b/src/App.css
@@ -54,12 +54,19 @@ body {
 
 /** main section **/
 
+.section {
+    background-color: var(--cor-pri);
+    padding: 15px 0;
+    margin-top: 40px;
+    border-radius: 12px;
+    box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.3);
+}
 .title {
     color: #1c1c1c;
     background-color: azure;
     width: 320px;
     text-align: center;
-    margin: 40px auto 20px;
+    margin: 0 auto 20px;
     padding: 5px;
     font: 600 24px Twinkle Star;
     border: 1px solid #1c1c1c;
@@ -71,7 +78,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 5px;
-    width: 80%;
+    width: 85%;
     margin: auto;
 }
 .inputs {
@@ -102,12 +109,24 @@ body {
     margin-right: 10px;
 }
 .add-btn {
+    cursor: pointer;
     color: azure;
     background-color: rgba(128, 0, 128, 0.8);
+    height: 38px;
     width: 40%;
     margin: auto;
     padding: 2px;
     border-radius: 16px;
     border: 1px solid azure;
     font: 400 24px caveat;
+    box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5 );
+}
+.add-btn:hover {
+    border: 2px solid azure;
+}
+
+/* reminder list section */
+
+.reminder-list {
+    margin-top: 20px;
 }
