--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,25 @@ body {
 .reminder-list {
     margin-top: 20px;
 }
+.list-container {
+    width: 85%;
+    margin: auto;
+}
+.refresh-btn {
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    height: 30px;
+    width: 90px;
+    margin-bottom: 20px;
+    color: azure;
+    background-color: rgba(128, 0, 128, 0.8);
+    padding: 2px 8px;
+    border: 1px solid azure;
+    border-radius: 12px;
+    font: 900 18px caveat;
+    box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+.refresh-btn:hover {
+    border: 2px solid azure;
+}
