--- a/src/remind-container/remind.css
+++ b/src/remind-container/remind.css
@@ -1,4 +1,5 @@
 .remind-block {
+    position: relative;
     width: 100%;
     background-color: azure;
     border: 1px solid #1c1c1c;
@@ -8,10 +9,27 @@
     margin-bottom: 8px;
 }
 .reminder-title {
+    position: relative;
     display: block;
     border-bottom: 2px solid var(--cor-det);
     padding: 2px 5px 5px;
     border-bottom-right-radius: 12px;
+}
+.reminder-title > * {
+    display: block;
+    max-width: 90%;
+    overflow: auto;
+}
+.delete-btn {
+    cursor: pointer;
+    background-color: transparent;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+}
+.delete-btn:hover {
+    color: rgb(175, 0, 0);
+    text-shadow: 0px 0px 5px rgb(175, 0, 0);
 }
 .reminder-desc {
     padding: 5px;
