--- a/src/remind-container/remind.css
+++ b/src/remind-container/remind.css
@@ -5,7 +5,7 @@
     border: 1px solid #1c1c1c;
     border-radius: 8px;
     padding: 3px;
-    box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: -2px 2px 2px #00000080;
     margin-bottom: 8px;
 }
 .reminder-title {
@@ -41,4 +41,27 @@
 }
 .iten-time {
     text-decoration: underline;
+}
+/* congrats */
+.congrats {
+    position: relative;
+    width: 100%;
+    background-color: azure;
+    border: 1px solid #1c1c1c;
+    border-radius: 8px;
+    padding: 3px;
+    box-shadow: -2px 2px 2px #00000080;
+    margin-bottom: 8px;
+}
+.congrats > h3 {
+    text-align: center;
+    font: 600 24px twinkle star;
+    text-shadow: 0 0 3px var(--cor-det);
+    margin-top: 5px;
+}
+.congrats > p {
+    text-align: center;
+    padding: 5px 0 10px;
+    font: 400 20px caveat;
+    text-decoration: underline
 }
