--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -44,17 +44,17 @@
 .guest-btn {
     display: block;
     cursor: pointer;
-    color: azure;
+    color: var(--cor-opo);
     height: 24px;
     background-color: transparent;
     margin: auto;
     padding: 2px 8px;
     border-radius: 10px;
-    border: 1px solid azure;
+    border: 1px solid var(--cor-opo);
     font-size: 12PX;
     font-weight: 600;
     box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5 );
 }
 .guest-btn:hover {
-    border: 2px solid azure;
+    border: 2px solid var(--cor-opo);
 }
