--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -115,6 +115,41 @@ body {
     width: 70px;
     margin-right: 10px;
 }
+.week {
+    color: var(--cor-opo);
+    display: flex;
+    gap: 6px;
+    margin: 0 auto 15px;
+    align-items: center;
+    font-size: 14px;
+}
+.week-lab {
+    cursor: pointer;
+    display: grid;
+    gap: 3px;
+    align-items: center;
+    background-color: var(--cor-bac);
+    padding: 5px 3px;
+    text-align: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    min-width: 36px;
+    border-radius: 8px;
+}
+.week-check {
+    cursor: pointer;
+    appearance: none;
+    background-color: var(--cor-opo);
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    border-radius: 50%;
+    margin: auto;
+}
+.week-check:checked {
+    background: radial-gradient(circle,rgb(40, 163, 122), aquamarine );
+    border: 2px solid black;
+}
 .add-btn {
     cursor: pointer;
     color: azure;
